--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
+
 {
-  "name": "gramcart---rural-hyper-local-marketplace",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "gramcart-backend",
+  "version": "1.0.0",
+  "description": "Backend for GramCart Marketplace",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.35.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0"
   }
 }
