--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 
 {
-  "name": "gramcart-backend",
+  "name": "gramcart-marketplace",
   "version": "1.0.0",
-  "description": "Backend for GramCart Marketplace",
+  "description": "Full-stack Rural Hyper-local Marketplace",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install && echo 'No frontend build needed for static files' || exit 0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
