--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "gramcart-marketplace",
   "version": "1.0.0",
-  "description": "Full-stack Rural Hyper-local Marketplace",
+  "description": "Scalable Rural Hyper-local Marketplace",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -19,17 +19,10 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.16",
-    "nodemon": "^2.0.22",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
     "vite": "^5.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
