--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "gramcart-marketplace",
   "version": "1.0.0",
@@ -11,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
