--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,7 +5,39 @@
 PORT=4000
 
 # MongoDB connection string
-MONGO_URI=mongodb+srv://username:password@cluster.abc.mongodb.net/Database
+MONGO_URI===> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys
+==> Build failed 😞
+npm error A complete log of this run can be found in: /opt/render/.cache/_logs/2026-01-14T06_06_32_618Z-debug-0.log
+npm error   npm run
+npm error To see a list of scripts, run:
+npm error
+npm error Missing script: "build"
+==> Running build command 'npm run build'...
+Run `npm audit` for details.
+  npm audit fix --force
+To address all issues (including breaking changes), run:
+  npm audit fix
+To address issues that do not require attention, run:
+27 vulnerabilities (4 low, 4 moderate, 17 high, 2 critical)
+  run `npm fund` for details
+21 packages are looking for funding
+up to date, audited 281 packages in 750ms
+Run `npm audit` for details.
+  npm audit fix --force
+To address all issues (including breaking changes), run:
+  npm audit fix
+To address issues that do not require attention, run:
+27 vulnerabilities (4 low, 4 moderate, 17 high, 2 critical)
+  run `npm fund` for details
+21 packages are looking for funding
+up to date, audited 281 packages in 1s
+==> Docs on specifying a Node.js version: https://render.com/docs/node-version
+==> Using Node.js version 22.16.0 (default)
+==> Installing dependencies with npm...
+==> Downloaded 125MB in 1s. Extraction took 3s.
+==> Checking out commit 316d5b4f702011e55dd80bac880033abeed17399 in branch main
+==> Cloning from https://github.com/biyahdaan/gramcart
+==> Downloading cache...
 
 # JWT secret and expiry
 JWT_SECRET=WFFWf15115U842UGUBWF81EE858UYBY51BGBJ5E51Q
